# grid-trader

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/config/: __init__.py  base_config.py  trading_config.py
src/config/symbols/: __init__.py  bnb_usdt.py  eth_usdt.py  template.py
src/core/: __init__.py
src/core/exchange/: __init__.py  base.py  client.py  simulation_client.py
src/core/trading/: __init__.py  grid_trader.py  order_tracker.py  position_controller.py  risk_manager.py
src/utils/: __init__.py  base_price_manager.py  helpers.py  logger.py  notifications.py  price_calculator.py
src/web/: __init__.py  server.py
src/web/templates/: config.html  index.html  logs.html
tools/: base_price_cli.py
